--- a/config.json
+++ b/config.json
@@ -1,5 +1,6 @@
 {
     "cookie_secret" : "",
-    "mongodb_connection": "mongodb://localhost:27017/heros", 
-    "portno" : "2000"
+    "mongodb_connection": "mongodb://localhost:27017/school", 
+    "portno" : "2000", 
+    "secret": "IBASchool"
 }
