--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node ./bin/index"
   },
   "dependencies": {
+    "@types/nodemailer": "^1.3.32",
     "body-parser": "^1.16.1",
     "cookie-parser": "^1.4.3",
     "errorhandler": "^1.5.0",
@@ -20,6 +21,8 @@
     "method-override": "^2.3.7",
     "mongoose": "^4.8.5",
     "morgan": "^1.8.1",
+    "multer": "^1.3.0",
+    "nodemailer": "^4.0.1",
     "pug": "^2.0.0-beta11",
     "q": "^1.4.1",
     "ws": "^2.3.0"
