--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "errorhandler": "^1.5.0",
     "express": "^4.14.1",
     "express-session": "^1.15.1",
+    "jsonwebtoken": "^7.4.0",
     "method-override": "^2.3.7",
     "mongoose": "^4.8.5",
     "morgan": "^1.8.1",
